test/tests/stages/9_functions/valid/no_arguments/no_return_value.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(foo)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(1)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  identifier(foo)
  (
  )
  ;
  return
  const int(3)
  ;
  }
