test/tests/stages/9_functions/invalid_types/extra_credit/compound_assign_function_rhs.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  identifier(a)
  +=
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
